--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,7 @@ node_modules/
 crontab
 log.txt
 address_metadata/metadata/
+address_metadata/metadata_1/
+address_metadata/metadata_old/
+
 address_metadata/logs/
