--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ log.txt
 address_metadata/metadata/
 address_metadata/metadata_1/
 address_metadata/metadata_old/
+address_metadata/twitter_usernames/
 
 address_metadata/logs/
 twitter_info/
